languages/montiarc-fe/src/test/resources/contextconditions/invalid/AutomatonWithoutState.arc
package contextconditions.invalid;

component AutomatonWithoutState {

  automaton AutomatonWithoutState {
  }
}
